dev/tests/cases/neg/42_echo_task.tv
df f() -> i64 { return 1; }

df main() -> void {
    set h: task<i64> = raven f();
    echo!(h);
    fixed x: i64 = join(h);
    echo!(x);
}
